refactor: improve education page layout for consistency

--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -44,47 +44,54 @@
     </ul>
 </div>
 
-<button style="padding: 0%; border: 0px transparent; background-color: transparent; outline: none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
-  <h2>Education</h2>
-</button>
 
-<div id="content-education" class="collapse in">
-  <table style="width: 100%; border: 0px; border-spacing: 0px; border-collapse: collapse; margin: auto;">
-    <tbody>
-      <tr>
-        <td style="padding: 2.5% 2.5% 0% 0%; width: 10%; vertical-align: top; text-align: center; min-width: 120px;">
+<button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
+    <h2>Education</h2>
+  </button>
+  <div id="content-education">
+  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+    <tr style="padding-top: 0; padding-bottom: 0;">
+      <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
           <div class="one">
-            <img src="{{ site.baseurl }}/images/tum-logo.png" style="width: 40%; height: auto;" alt="TUM logo">
+              <img src='{{ site.baseurl }}/images/tum-logo.png' style="width:70%;" alt="project image">
           </div>
-        </td>
-        <td style="padding: 2.5% 2.5% 0% 0%; width: 90%; vertical-align: top;">
-          <span style="font-size: 1.2em; font-weight: bold;">M.Sc - Technical University of Munich</span>
-          <div style="color: grey; font-size: 0.9em; margin: 0; padding: 0;"> 10.2021 - 08.2024 | Munich, Germany</div>
+      </td>
+      <td style="padding:2.5%;width:75%;vertical-align:top">
+          <papertitle><big><b>Technical University of Munich</b></big></papertitle>
+  
           <br>
-          <p align="justify" style="margin: 0; padding: 0;">
+          <papertitle style="color:gray"><big>M.Sc</big></papertitle>
+          <br>
+          10.2021 - 08.2024 | Munich, Germany
+          <br>
+          <p align="justify">
             Thesis: Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/">(IEEE, ICRA 2025)</a>
           </p>
-        </td>
-      </tr>
-            
-      <tr>
-        <td style="padding: 0 2.5% 2.5% 0%; width: 10%; vertical-align: top; text-align: center; min-width: 120px;">
+      </td>
+    </tr>
+  
+    <tr style="padding-top: 0; padding-bottom: 0;">
+      <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
           <div class="one">
-            <img src="{{ site.baseurl }}/images/ned-logo.png" style="width: 40%; height: auto;" alt="NED logo">
+              <img src='{{ site.baseurl }}/images/ned-logo.png' style="width:70%; height:auto;" alt="project image">
           </div>
-        </td>
-        <td style="padding: 0 2.5% 2.5% 0%; width: 90%; vertical-align: top;">
-          <span style="font-size: 1.2em; font-weight: bold;">B.Eng - NED University of Engineering and Technology</span>
-          <div style="color: grey; font-size: 0.9em; margin: 0; padding: 0;">12.2025 - 08.2019 | Karachi, Pakistan </div>
+      </td>
+      <td style="padding:2.5%;width:75%;vertical-align:top">
+          <papertitle><big><b>NED University of Engineering and Technology</b></big></papertitle>
+  
           <br>
-          <p align="justify" style="margin: 0; padding: 0;">
+          <papertitle style="color:gray"><big>B.Eng</big></papertitle>
+          <br>
+          12.2015 - 08.2019 | Karachi, Pakistan
+          <br>
+          <p align="justify">
             Thesis: Numerical Investigation of Heat Transfer Enhancement in Impinging Jets. <a href="https://doi.org/10.1002/htj.21986">(Wiley, Heat Transfer)</a>
           </p>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+      </td>
+    </tr>
+  
+  </tbody></table>
+  </div>
 
   
   <hr class="soft">
