--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -51,16 +51,13 @@
   <div id="content-education">
   <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
     <tr style="padding-top: 0; padding-bottom: 0;">
-      <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
+      <td style="padding:2.5%;width:15%;vertical-align:top;text-align:center;min-width:120px">
           <div class="one">
-              <img src='{{ site.baseurl }}/images/tum-logo.png' style="width:70%;" alt="project image">
+              <img src='{{ site.baseurl }}/images/tum-logo.png' style="width:40%;" alt="project image">
           </div>
       </td>
-      <td style="padding:2.5%;width:75%;vertical-align:top">
-          <papertitle><big><b>Technical University of Munich</b></big></papertitle>
-  
-          <br>
-          <papertitle style="color:gray"><big>M.Sc</big></papertitle>
+      <td style="padding:2.5%;width:85%;vertical-align:top">
+          <papertitle><big><b>M.Sc, Technical University of Munich</b></big></papertitle>
           <br>
           10.2021 - 08.2024 | Munich, Germany
           <br>
@@ -71,16 +68,13 @@
     </tr>
   
     <tr style="padding-top: 0; padding-bottom: 0;">
-      <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
+      <td style="padding:2.5%;width:15%;vertical-align:top;text-align:center;min-width:120px">
           <div class="one">
-              <img src='{{ site.baseurl }}/images/ned-logo.png' style="width:70%; height:auto;" alt="project image">
+              <img src='{{ site.baseurl }}/images/ned-logo.png' style="width:40%; height:auto;" alt="project image">
           </div>
       </td>
-      <td style="padding:2.5%;width:75%;vertical-align:top">
-          <papertitle><big><b>NED University of Engineering and Technology</b></big></papertitle>
-  
-          <br>
-          <papertitle style="color:gray"><big>B.Eng</big></papertitle>
+      <td style="padding:2.5%;width:85%;vertical-align:top">
+          <papertitle><big><b>B.Eng, NED University of Engineering and Technology</b></big></papertitle>
           <br>
           12.2015 - 08.2019 | Karachi, Pakistan
           <br>
