--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -61,7 +61,7 @@
           <br>
           10.2021 - 08.2024 | Munich, Germany
           <br>
-          <p align="justify">
+          <p align="justify" style="margin: 0;">
             Thesis: Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/">(IEEE, ICRA 2025)</a>
           </p>
       </td>
@@ -78,7 +78,7 @@
           <br>
           12.2015 - 08.2019 | Karachi, Pakistan
           <br>
-          <p align="justify">
+          <p align="justify" style="margin: 0;">
             Thesis: Numerical Investigation of Heat Transfer Enhancement in Impinging Jets. <a href="https://doi.org/10.1002/htj.21986">(Wiley, Heat Transfer)</a>
           </p>
       </td>
