--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -27,9 +27,9 @@
 
 
 <body>
-  <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+  <table class="page-table">
     <tr style="padding:px">
-      <td style="padding:0px">
+      <td class="page-cell">
 
 <!-- Section Tab -->
 <div class="nav-container">
@@ -52,18 +52,18 @@
 
 
 
-<button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-experience" id="experience">
+<button type="button" class="collapsible section-toggle" data-toggle="collapse" data-target="#content-experience" id="experience">
     <h2>Experience</h2>
   </button>
   <div id="content-experience">
-  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+  <table class="section-table experience-table"><tbody>
     <tr style="padding-top: 0; padding-bottom: 0;">
-      <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
-          <div class="one">
-              <img src='{{ site.baseurl }}/images/antler_logo.png' style="width:70%;" alt="project image">
+      <td class="entry-logo-cell">
+          <div class="logo-frame">
+              <img src='{{ site.baseurl }}/images/antler_logo.png' class="logo-image" alt="Antler logo">
           </div>
       </td>
-      <td style="padding:2.5%;width:75%;vertical-align:top">
+      <td class="entry-content-cell">
           <papertitle><big><b>ANTLER</b></big></papertitle>
   
           <br>
@@ -75,12 +75,12 @@
     </tr>
   
     <tr style="padding-top: 0; padding-bottom: 0;">
-      <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
-          <div class="one">
-              <img src='{{ site.baseurl }}/images/huawei-logo.jpeg' style="width:70%; height:auto;" alt="project image">
+      <td class="entry-logo-cell">
+          <div class="logo-frame">
+              <img src='{{ site.baseurl }}/images/huawei-logo.jpeg' class="logo-image" alt="Huawei logo">
           </div>
       </td>
-      <td style="padding:2.5%;width:75%;vertical-align:top">
+      <td class="entry-content-cell">
           <papertitle><big><b>Huawei Munich</b></big></papertitle>
   
           <br>
@@ -124,12 +124,12 @@
     </tr>
   
       <tr >
-        <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
-              <div class="one">
-                  <img src='{{ site.baseurl }}/images/tum-logo.png' style="width:70%; height:auto;" alt="project image">
+        <td class="entry-logo-cell">
+              <div class="logo-frame">
+                  <img src='{{ site.baseurl }}/images/tum-logo.png' class="logo-image" alt="TUM logo">
               </div>
           </td>
-          <td style="padding:2.5%;width:75%;vertical-align:top">
+          <td class="entry-content-cell">
              
               <papertitle><big><b>Technical University of Munich</b></big></papertitle>
               <br>
@@ -163,12 +163,12 @@
       </tr>
   
       <tr>
-        <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
-            <div class="one">
-                <img src='{{ site.baseurl }}/images/nust-logo.png' style="width:70%; height:auto;" alt="project image">
+        <td class="entry-logo-cell">
+            <div class="logo-frame">
+                <img src='{{ site.baseurl }}/images/nust-logo.png' class="logo-image" alt="NUST logo">
             </div>
         </td>
-        <td style="padding:2.5%;width:75%;vertical-align:top">
+        <td class="entry-content-cell">
            
             <papertitle><big><b>National University of Science and Technology</b></big></papertitle>
             <br>
@@ -193,12 +193,12 @@
     </tr>
   
       <tr>
-        <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
-            <div class="one">
-                <img src='{{ site.baseurl }}/images/ned-logo.png' style="width:70%; height:auto;" alt="project image">
+        <td class="entry-logo-cell">
+            <div class="logo-frame">
+                <img src='{{ site.baseurl }}/images/ned-logo.png' class="logo-image" alt="NED University logo">
             </div>
         </td>
-        <td style="padding:2.5%;width:75%;vertical-align:top">
+        <td class="entry-content-cell">
             <papertitle><big><b>NED University of Engineering and Technology</b></big></papertitle>
             <br>
             <papertitle style="color:gray"><big>Research Assistant </big></papertitle><papertitle><big>- Department of Mechanical Engineering</big></papertitle>
@@ -232,7 +232,7 @@
     
 
 
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+        <table class="footer-table">
             <tr>
               <td style="padding:0px">
                 <br>
