--- a/_layouts/new.html
+++ b/_layouts/new.html
@@ -27,9 +27,9 @@
 
 
 <body>
-  <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+  <table class="page-table">
     <tr style="padding:px">
-      <td style="padding:0px">
+      <td class="page-cell">
 
 <!-- Section Tab -->
         <div class="nav-container">
@@ -51,7 +51,7 @@
     
 
 
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+        <table class="footer-table">
           <tr>
             <td style="padding:0px">
               <br>
@@ -70,4 +70,3 @@
 
 
 </html>
-
