--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -27,9 +27,9 @@
 
 
 <body>
-  <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+  <table class="page-table">
     <tr style="padding:px">
-      <td style="padding:0px">
+      <td class="page-cell">
 
 <!-- Section Tab -->
 <div class="nav-container">
@@ -45,18 +45,18 @@
 </div>
 
 
-<button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
+<button type="button" class="collapsible section-toggle" data-toggle="collapse" data-target="#content-education" id="education">
     <h2>Education</h2>
   </button>
   <div id="content-education">
-  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+  <table class="section-table education-table"><tbody>
     <tr style="padding-top: 0; padding-bottom: 0;">
-      <td style="padding:2.5%;width:15%;vertical-align:top;text-align:center;min-width:120px">
-          <div class="one">
-              <img src='{{ site.baseurl }}/images/ned-logo.png' style="width:40%; height:auto;" alt="project image">
+      <td class="entry-logo-cell">
+          <div class="logo-frame">
+              <img src='{{ site.baseurl }}/images/ned-logo.png' class="logo-image" alt="NED University logo">
           </div>
       </td>
-      <td style="padding:2.5%;width:85%;vertical-align:top">
+      <td class="entry-content-cell">
           <papertitle><big><b>B.Eng, NED University of Engineering and Technology</b></big></papertitle>
           <br>
           12.2015 - 08.2019 | Karachi, Pakistan
@@ -68,12 +68,12 @@
     </tr>
   
     <tr style="padding-top: 0; padding-bottom: 0;">
-      <td style="padding:2.5%;width:15%;vertical-align:top;text-align:center;min-width:120px">
-          <div class="one">
-              <img src='{{ site.baseurl }}/images/tum-logo.png' style="width:40%;" alt="project image">
+      <td class="entry-logo-cell">
+          <div class="logo-frame">
+              <img src='{{ site.baseurl }}/images/tum-logo.png' class="logo-image" alt="TUM logo">
           </div>
       </td>
-      <td style="padding:2.5%;width:85%;vertical-align:top">
+      <td class="entry-content-cell">
           <papertitle><big><b>M.Sc, Technical University of Munich</b></big></papertitle>
           <br>
           10.2021 - 08.2024 | Munich, Germany
