--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -45,28 +45,23 @@
 </div>
 
 
-<button type="button" class="collapsible section-toggle" data-toggle="collapse" data-target="#content-education" id="education">
+<div class="section-toggle" id="education">
     <h2>Education</h2>
-  </button>
-  <div id="content-education">
+</div>
   <table class="section-table education-table"><tbody>
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/ned-logo.png' class="logo-image" alt="NED University logo">
+              <img src='{{ site.baseurl }}/images/Logo_Bonn.png' class="logo-image" alt="University of Bonn logo">
           </div>
       </td>
       <td class="entry-content-cell">
-          <papertitle><big><b>B.Eng, NED University of Engineering and Technology</b></big></papertitle>
+          <papertitle><big><b>PhD, University of Bonn</b></big></papertitle>
           <br>
-          12.2015 - 08.2019 | Karachi, Pakistan
-          <br>
-          <p align="justify" style="margin: 0;">
-            Thesis: Numerical Investigation of Heat Transfer Enhancement in Impinging Jets. <a href="https://doi.org/10.1002/htj.21986">(Wiley, Heat Transfer)</a>
-          </p>
+          Bonn, North Rhine-Westphalia, Germany
       </td>
     </tr>
-  
+
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
@@ -78,14 +73,43 @@
           <br>
           10.2021 - 08.2024 | Munich, Germany
           <br>
-          <p align="justify" style="margin: 0;">
+          <p align="justify" class="entry-summary">
             Thesis: Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/">(IEEE, ICRA 2025)</a>
+          </p>
+      </td>
+    </tr>
+
+    <tr style="padding-top: 0; padding-bottom: 0;">
+      <td class="entry-logo-cell">
+          <div class="logo-frame">
+              <img src='{{ site.baseurl }}/images/antler_logo.png' class="logo-image" alt="Antler logo">
+          </div>
+      </td>
+      <td class="entry-content-cell">
+          <papertitle><big><b>Entrepreneur in Residence, Antler</b></big></papertitle>
+          <br>
+          Mar 2025 - Jun 2025 | Munich, Germany
+      </td>
+    </tr>
+
+    <tr style="padding-top: 0; padding-bottom: 0;">
+      <td class="entry-logo-cell">
+          <div class="logo-frame">
+              <img src='{{ site.baseurl }}/images/ned-logo.png' class="logo-image" alt="NED University logo">
+          </div>
+      </td>
+      <td class="entry-content-cell">
+          <papertitle><big><b>B.Eng, NED University of Engineering and Technology</b></big></papertitle>
+          <br>
+          12.2015 - 08.2019 | Karachi, Pakistan
+          <br>
+          <p align="justify" class="entry-summary">
+            Thesis: Numerical Investigation of Heat Transfer Enhancement in Impinging Jets. <a href="https://doi.org/10.1002/htj.21986">(Wiley, Heat Transfer)</a>
           </p>
       </td>
     </tr>
   
   </tbody></table>
-  </div>
 
   
   <hr class="soft">
