--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -60,165 +60,103 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/antler_logo.png' class="logo-image" alt="Antler logo">
+              <img src='{{ site.baseurl }}/images/lamarr-logo-2023.png' class="logo-image" alt="Lamarr Institute logo">
           </div>
       </td>
       <td class="entry-content-cell">
-          <papertitle><big><b>ANTLER</b></big></papertitle>
-  
+          <papertitle><big><b>Lamarr Institute</b></big></papertitle>
           <br>
-          <papertitle style="color:gray"><big>Entrepreneur in Residence </big></papertitle><papertitle><big>- Spring 2025 Cohort</big></papertitle>
+          <papertitle style="color:gray"><big>Doctoral Researcher </big></papertitle><papertitle><big>- Uni Bonn & Lamarr Institute</big></papertitle>
           <br>
-          Mar 2025 - Jun 2025
+          Bonn, North Rhine-Westphalia, Germany · On-site
           <br>
+          <p align="justify" class="entry-summary">Doctoral Researcher @ Uni Bonn & Lamarr Institute.</p>
       </td>
     </tr>
-  
+
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/huawei-logo.jpeg' class="logo-image" alt="Huawei logo">
+              <img src='{{ site.baseurl }}/images/sereact_icon.jpeg' class="logo-image" alt="Sereact logo">
           </div>
       </td>
       <td class="entry-content-cell">
-          <papertitle><big><b>Huawei Munich</b></big></papertitle>
-  
+          <papertitle><big><b>Sereact</b></big></papertitle>
           <br>
-          <papertitle style="color:gray"><big>Masters Thesis Research </big></papertitle><papertitle><big>- Intelligent Clound Technologies Lab</big></papertitle>
+          <papertitle style="color:gray"><big>Robotics Engineer</big></papertitle>
           <br>
-          Oct 2023 - Apr 2024
+          Stuttgart, Baden-Württemberg, Germany
           <br>
-          <p align="justify">
-            <details>
-            <summary>Conducted R&D in the area of zero shot approches for "Open World 3D Scene Understanding" utilizing foundation and large language models; co-supervised by <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei-ICTL</a> and <a href="https://www.cee.ed.tum.de/cms/home/">TUM-CMS</a>.</summary>            
-            <ul>
-                <li align="justify">Developed <a href="https://opensu3d.github.io/">OpenSU3D</a> an incremental and scalable approch for zero-shot 3D scene understanding utilizing foundation and large language models. </li>
-                <li align="justify">Quantitatively and qualitatively demonstrated effectiveness of open vocabulary segmentation and context-based instance retrieval, exceeding state-of-the-art approaches. </li>
-                <li align="justify">Explored downstream applications such as 3D instance segmentation, automatic labeling, and spatial reasoning (chat with scene using LLM). </li>
-                <li align="justify">Currently, working on research paper to publish findings. </li>
-                <!--li align="justify">Developed feature fusion scheme based on CLIP embeddings for context-based localization of instances in 3D space with open-vocabulary queries. Quantitative and qualitative performance exceeds current state of the art.</li> 
-                <li align="justify">Additionally, conducted explorative study and demonstrated global automatic labeling and spatial reasoning over 3D scene, using large language modes.</li>
-                <li align="justify">Currently, working on research paper based on findings.</li--> 
-              </ul>
-            </details>
-          </p>
-       
-          <br>
-          <papertitle style="color:gray"><big>Research Intern  </big></papertitle><papertitle><big>- Intelligent Clound Technologies Lab</big></papertitle>
-          <br>
-          Apr 2023 - Oct 2024
-          <br>
-          <p align="justify">
-            <details>
-              <summary>Contributed as a Robotics Research Intern at <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei's Intelligent Cloud Technologies Lab</a> in the area of 3D robotics perception, primarily focusing on LiDAR-based Life Long Localization and Mapping.</summary>      
-              <ul>
-                  <li align="justify">Research cutting-edge techniques to improve LiDAR-based lifelong localization and mapping systems. Implemented hierarchical bundle adjustment, pose graph optimization, etc. to enhance localization and mapping performance.</li>
-                  <li align="justify">Refactor and modularize the SLAM pipeline to facilitate scalability, maintainability, and ease of integration with future enhancements.</li>
-                  <li align="justify"> Studied and implemented recent methods, and explored potential research directions in the areas of 3D Robotics Perception, Neural Radiance Field, and Scene Understanding.</li>
-              </ul>
-            </details>
-          </p>
-  
-          
+          <p align="justify" class="entry-summary">Developed transformer based DL models for 9 DoF 3D bounding box estimation.</p>
       </td>
     </tr>
-  
-      <tr >
-        <td class="entry-logo-cell">
-              <div class="logo-frame">
-                  <img src='{{ site.baseurl }}/images/tum-logo.png' class="logo-image" alt="TUM logo">
-              </div>
-          </td>
-          <td class="entry-content-cell">
-             
-              <papertitle><big><b>Technical University of Munich</b></big></papertitle>
-              <br>
-              <papertitle style="color:gray"><big>HiWi </big></papertitle><papertitle><big>- Chair of Computational Modeling and Simulation</big></papertitle>
-              <br>
-              Apr 2022 - Apr 2023
-              <br>
-              <p align="justify">
-                <details>
-                  <summary>Contributed to the <a href="https://intrepid-project.eu/">Intriped Project</a> as a student research assistant and the 
-                <a href="https://amc-trr277.de/">Additive Manufacturing Project</a> as part of software practicum at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>.</summary>      
-                  <ul>
-                    <li align="justify">Proposed methodology for robust, real-time control of material 
-                      flow in additive manufacturing for construction using an RGB camera.
-                      Successfully deployed this solution on a scaled-down setup based on UR10 robot.</li>
-                    <li align="justify">Developed a lightweight Blender-based LiDAR simulation tool tailored for large
-                      3D building models. The tool automatically plans paths based on the 3D model
-                      and exports LiDAR scans according to configured specifications. Additionally, enhanced the existing 2D BIM-to-SLAM simulation module for 3D environ-
-                      ments by incorporating support for Gazebo.</li>
-                    <li align="justify">Collaborated in the development of mapping system based on GO1 quadruped
-                      robot. Streamlined process for sensor calibration, synchronization, communication, and data recording. Dockerized and configured open-sourced ROS-based
-                      SLAM libraries for seamless use in indoor and outdoor environments.</li>
-  
-                  </ul>
-                </details>
-              </p>
-  
-                  
-              
-          </td>
-      </tr>
-  
-      <tr>
-        <td class="entry-logo-cell">
-            <div class="logo-frame">
-                <img src='{{ site.baseurl }}/images/nust-logo.png' class="logo-image" alt="NUST logo">
-            </div>
-        </td>
-        <td class="entry-content-cell">
-           
-            <papertitle><big><b>National University of Science and Technology</b></big></papertitle>
-            <br>
-            <papertitle style="color:gray"><big>Research Engineer </big></papertitle><papertitle><big>- Integrated Navigation Terrestrial Electromagnetic Lab</big></papertitle>
-            <br>
-            Jul 2020 - Oct 2021
-            <br>
-            <p align="justify">
-              <details>
-                <summary>Contributed to a diverse set of projects focused on the development of aerial robots at the <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a> at 
-              National University of Science and University.</summary>      
-              <ul>
-                <li align="justify">Developed setup for Software in the Loop (SITL) simulation for tuning the flight controller. Integrated the X-Plane flight simulator with the flight controller firmware. Based on aeronautical design, developed models of vertical take-off and fixed-wing aerial vehicles for the simulator.</li>
-                <li align="justify">Carried out end-to-end development of vertical take-off and fixed-wing aerial vehicles, from preliminary design (aeronautics calculations), detailed design (detailed CAD assemblies) to the export of manufacturing plans. Optimized design, aerodynamics, and structural components by conducting CFD, FEA, FSI simulations.</li>
-                <li align="justify">Provided guidance and mentorship to undergraduate interns to support project development.</li>    
-              </ul>
-              </details>
-              </p>
-            
-           
-        </td>
+
+    <tr style="padding-top: 0; padding-bottom: 0;">
+      <td class="entry-logo-cell">
+          <div class="logo-frame">
+              <img src='{{ site.baseurl }}/images/startup.png' class="logo-image" alt="Stealth logo">
+          </div>
+      </td>
+      <td class="entry-content-cell">
+          <papertitle><big><b>Stealth</b></big></papertitle>
+          <br>
+          <papertitle style="color:gray"><big>Founder</big></papertitle>
+          <br>
+          Munich, Bavaria, Germany
+          <br>
+          <p align="justify" class="entry-summary">Worked towards building a 3D Gen AI startup for video game development.</p>
+      </td>
     </tr>
-  
-      <tr>
-        <td class="entry-logo-cell">
-            <div class="logo-frame">
-                <img src='{{ site.baseurl }}/images/ned-logo.png' class="logo-image" alt="NED University logo">
-            </div>
-        </td>
-        <td class="entry-content-cell">
-            <papertitle><big><b>NED University of Engineering and Technology</b></big></papertitle>
-            <br>
-            <papertitle style="color:gray"><big>Research Assistant </big></papertitle><papertitle><big>- Department of Mechanical Engineering</big></papertitle>
-            <br>
-            Jul 2019 - Jan 2020
-            <br>
-            <p align="justify">
-              <details>
-                <summary>Assisted research activities in Mechanical Department of NED University under the supervision of <a href="https://scholar.google.com/citations?user=jOthSmQAAAAJ&hl=en">Dr.-Ing. Usman Allauddin.</a></summary>                  
-                <ul>
-                  
-                    <li align="justify">Conducted comparative studies to numerically assess different RANS turbulence models for prediction of the secondary peak in Nusselt number resulting from a hydraulic jump in jet impingement cooling.</li>
-                    <li align="justify">Extensively reviewed literature and conducted numerical simulations related to impinging jets focusing on the influence of different types of fins,
-                      surface topology, pulsating/synthetic jets, and nanofluids on heat transfer
-                      characteristics. Collaborate on two peer-reviewed research papers based on findings.</li>
-                    <li align="justify">Mentored undergraduate student groups, on their research project.</li>
-                </ul>
-              </details>
-            </p>         
-        </td>
+
+    <tr style="padding-top: 0; padding-bottom: 0;">
+      <td class="entry-logo-cell">
+          <div class="logo-frame">
+              <img src='{{ site.baseurl }}/images/huawei-logo.png' class="logo-image" alt="Huawei logo">
+          </div>
+      </td>
+      <td class="entry-content-cell">
+          <papertitle><big><b>Huawei</b></big></papertitle>
+          <br>
+          <papertitle style="color:gray"><big>Robotics Research</big></papertitle>
+          <br>
+          Munich, Bavaria, Germany
+          <br>
+          <p align="justify" class="entry-summary">Robotics Research (Internship + MSc Thesis) @ Huawei Munich Research Center. Open World 3D Scene Understanding utilizing foundation models and LLM (IEEE ICRA'25). LiDAR SLAM (Life-Long Localization & Mapping).</p>
+      </td>
+    </tr>
+
+    <tr style="padding-top: 0; padding-bottom: 0;">
+      <td class="entry-logo-cell">
+          <div class="logo-frame">
+              <img src='{{ site.baseurl }}/images/nust-logo.png' class="logo-image" alt="NUST logo">
+          </div>
+      </td>
+      <td class="entry-content-cell">
+          <papertitle><big><b>National University of Sciences and Technology (NUST)</b></big></papertitle>
+          <br>
+          <papertitle style="color:gray"><big>Research Engineer </big></papertitle><papertitle><big>- Integrated Navigation Terrestrial Electromagnetic Lab (PNEC-NUST)</big></papertitle>
+          <br>
+          Pakistan
+          <br>
+          <p align="justify" class="entry-summary">Developed autonomous aerial robots — VTOL (vertical-take-off-and-landing) and fixed-wing — and contributed across all phases of development: design, control, simulation, and manufacturing.</p>
+      </td>
+    </tr>
+
+    <tr style="padding-top: 0; padding-bottom: 0;">
+      <td class="entry-logo-cell">
+          <div class="logo-frame">
+              <img src='{{ site.baseurl }}/images/ned-logo.png' class="logo-image" alt="NED University logo">
+          </div>
+      </td>
+      <td class="entry-content-cell">
+          <papertitle><big><b>NED University of Engineering and Technology</b></big></papertitle>
+          <br>
+          <papertitle style="color:gray"><big>Student Research Assistant</big></papertitle>
+          <br>
+          Pakistan
+          <br>
+          <p align="justify" class="entry-summary">Numerical modeling and simulation of nanofluids, turbulence, and heat transfer. Co-authored two peer-reviewed journal papers based on research.</p>
+      </td>
     </tr>
   
   </tbody></table>
