--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -56,9 +56,13 @@
           </div>
       </td>
       <td class="entry-content-cell">
-          <papertitle><big><b>PhD, University of Bonn</b></big></papertitle>
+          <papertitle><big><b>The University of Bonn</b></big></papertitle>
           <br>
-          Bonn, North Rhine-Westphalia, Germany
+          <papertitle style="color:gray"><big>Doctor of Philosophy (PhD), Computer Science</big></papertitle>
+          <br>
+          2025 - 2028 (expected)
+          <br>
+          <p align="justify" class="entry-summary">PhD Candidate @ Robotics Perception & Learning Lab.</p>
       </td>
     </tr>
 
@@ -76,19 +80,6 @@
           <p align="justify" class="entry-summary">
             Thesis: Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/">(IEEE, ICRA 2025)</a>
           </p>
-      </td>
-    </tr>
-
-    <tr style="padding-top: 0; padding-bottom: 0;">
-      <td class="entry-logo-cell">
-          <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/antler_logo.png' class="logo-image" alt="Antler logo">
-          </div>
-      </td>
-      <td class="entry-content-cell">
-          <papertitle><big><b>Entrepreneur in Residence, Antler</b></big></papertitle>
-          <br>
-          Mar 2025 - Jun 2025 | Munich, Germany
       </td>
     </tr>
 
