--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -94,17 +94,17 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td class="entry-logo-cell">
           <div class="logo-frame">
-              <img src='{{ site.baseurl }}/images/startup.png' class="logo-image" alt="Stealth logo">
+              <img src='{{ site.baseurl }}/images/antler_logo.png' class="logo-image" alt="Antler logo">
           </div>
       </td>
       <td class="entry-content-cell">
-          <papertitle><big><b>Stealth</b></big></papertitle>
+          <papertitle><big><b>Antler</b></big></papertitle>
           <br>
-          <papertitle style="color:gray"><big>Founder</big></papertitle>
+          <papertitle style="color:gray"><big>Entrepreneur in Residence </big></papertitle><papertitle><big>- Spring 2025 Cohort</big></papertitle>
           <br>
           Munich, Bavaria, Germany
           <br>
-          <p align="justify" class="entry-summary">Worked towards building a 3D Gen AI startup for video game development.</p>
+          <p align="justify" class="entry-summary">Entrepreneur in Residence @ ANTLER Spring 2025 Cohort.</p>
       </td>
     </tr>
 
