--- a/style.scss
+++ b/style.scss
@@ -222,15 +222,21 @@ p:last-child {
   font-family: 'Lato';
 }
 
+.education-table td {
+  padding: 1.2% 1.2%;
+}
+
 .education-table .entry-logo-cell {
-  width: 25%;
-  min-width: 120px;
-  text-align: center;
-  vertical-align: middle;
+  width: 16%;
+  min-width: 88px;
+  text-align: left;
+  vertical-align: top;
+  padding-right: 0.6rem;
 }
 
 .education-table .entry-content-cell {
-  width: 75%;
+  width: 84%;
+  padding-left: 0.2rem;
 }
 
 .education-table .entry-summary {
@@ -238,15 +244,21 @@ p:last-child {
   line-height: 1.4;
 }
 
+.experience-table td {
+  padding: 1.2% 1.2%;
+}
+
 .experience-table .entry-logo-cell {
-  width: 25%;
-  min-width: 120px;
-  text-align: center;
-  vertical-align: middle;
+  width: 16%;
+  min-width: 88px;
+  text-align: left;
+  vertical-align: top;
+  padding-right: 0.6rem;
 }
 
 .experience-table .entry-content-cell {
-  width: 75%;
+  width: 84%;
+  padding-left: 0.2rem;
 }
 
 .experience-table .entry-summary {
@@ -370,7 +382,7 @@ p:last-child {
 .logo-frame {
   width: var(--logo-frame-size);
   height: var(--logo-frame-size);
-  margin: 0 auto;
+  margin: 0;
   display: flex;
   align-items: center;
   justify-content: center;
