--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -56,13 +56,11 @@
           </div>
       </td>
       <td class="entry-content-cell">
-          <papertitle><big><b>The University of Bonn</b></big></papertitle>
+          <papertitle><big><b>PhD, University of Bonn</b></big></papertitle>
           <br>
-          <papertitle style="color:gray"><big>Doctor of Philosophy (PhD), Computer Science</big></papertitle>
+          2025 - 2028 (expected) | Bonn, Germany
           <br>
-          2025 - 2028 (expected)
-          <br>
-          <p align="justify" class="entry-summary">PhD Candidate @ Robotics Perception & Learning Lab.</p>
+          <p align="justify" class="entry-summary">CS PhD Candidate @ Robotics Perception & Learning Lab.</p>
       </td>
     </tr>
 
