--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -64,13 +64,12 @@
           </div>
       </td>
       <td class="entry-content-cell">
-          <papertitle><big><b>Lamarr Institute</b></big></papertitle>
+          <papertitle><big><b>DoctoralResearcher, Uni-Bonn & Lamarr Institute</b></big></papertitle>
           <br>
-          <papertitle style="color:gray"><big>Doctoral Researcher </big></papertitle><papertitle><big>- Uni Bonn & Lamarr Institute</big></papertitle>
+          12.2025 - Present | Bonn, Germany
           <br>
-          Bonn, North Rhine-Westphalia, Germany · On-site
-          <br>
-          <p align="justify" class="entry-summary">Doctoral Researcher @ Uni Bonn & Lamarr Institute.</p>
+          <p align="justify" class="entry-summary">PhD Candidate and Researcher @ Uni Bonn & Lamarr Institute.</p>
+          <p align="justify" class="entry-summary">Research Area: Spatial/Physical AI, Robotic Learing, Open World Understanding.</p>
       </td>
     </tr>
 
@@ -81,12 +80,11 @@
           </div>
       </td>
       <td class="entry-content-cell">
-          <papertitle><big><b>Sereact</b></big></papertitle>
+          <papertitle><big><b>Research Engineer, Sereact</b></big></papertitle>
           <br>
-          <papertitle style="color:gray"><big>Robotics Engineer</big></papertitle>
+          09.2025 - 12.2025 | Stuttgart, German
           <br>
-          Stuttgart, Baden-Württemberg, Germany
-          <br>
+          <p align="justify" class="entry-summary">Research Engineer @ Sereact. </p>
           <p align="justify" class="entry-summary">Developed transformer based DL models for 9 DoF 3D bounding box estimation.</p>
       </td>
     </tr>
